--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,3 +60,33 @@ form{
     display: inline-block;
     margin-right: 10px;
 }
+.mmodal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.7);
+    font-size: 14px;
+    line-height: 1.6;
+    margin: 10px;
+}
+.mmodal button{
+    width: 100px;
+    margin: 0 auto;
+
+}
+.modal-content{
+    position: relative;
+    top: 40%;
+    left: 25%;
+    width: 50%;
+    font-size: 1.5vw;
+    margin: 20px;
+    overflow: scroll;
+    text-align: center;
+}
+
