--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,7 +76,10 @@ form{
 }
 .mmodal button{
     width: 100px;
-    margin: 0 auto;
+    margin: 0 auto 10px; 
+    background-color: black;
+    color: red;
+    border: 1px solid red;
 
 }
 .modal-content{
@@ -85,8 +88,14 @@ form{
     left: 25%;
     width: 50%;
     font-size: 1.5vw;
-    margin: 20px;
-    overflow: scroll;
+    overflow: auto; 
     text-align: center;
+    background-color: black;
+    color: green;
+    border: 2px solid green;
 }
+.modal-p{
+    margin: 20px;
+}
+
 
